--- a/assets/header.html
+++ b/assets/header.html
@@ -13,7 +13,7 @@
                 </div>
                 <a href="assets/CV.pdf">CV</a>
                 <a href="https://www.linkedin.com/in/tomcantellow/" target="_blank">LinkedIn</a>
-                <a href="mailto:t.cantellow@bristol.ac.uk">Contact</a>
+                <a href="mailto:tcantellow@gmail.com">Contact</a>
             </div>
         </div>
     </header>
