--- a/statistics.html
+++ b/statistics.html
@@ -19,17 +19,17 @@
         .category {
             margin-bottom: 2rem;
         }
-        .category strong {
-            font-size: 1.1rem;
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-        ul.resources-list {
+        ul.tools-list {
             list-style-type: disc;
             padding-left: 1.5rem;
             margin-top: 0.5rem;
         }
-        ul.resources-list > li {
+        ul.tools-list > li {
+            margin-bottom: 0.5rem;
+        }
+        .category > strong {
+            font-size: 1.1rem;
+            display: block;
             margin-bottom: 0.5rem;
         }
     </style>
