Update and rename statistics.html to resources.html

--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1" />
     <title>Tom Cantellow</title>
-    <meta name="Statistics" content="Learning materials" />
+    <meta name="Resources" content="Tools & learning materials" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="assets/styles.css" />
     <script src="assets/script.js" defer></script>
@@ -108,6 +108,18 @@
                 <li><a href="https://link.springer.com/article/10.1007/s11135-017-0584-6" target="_blank" rel="noopener noreferrer">Springer: Statistical Methods in Survey Research</a> – Scholarly article.</li>
                 <li><a href="https://advstats.psychstat.org/book/longitudinal/index.php" target="_blank" rel="noopener noreferrer">Longitudinal Data Analysis</a> – Guide to longitudinal data methods.</li>
                 <li><a href="https://w3schools.com/sql/" target="_blank" rel="noopener noreferrer">W3Schools SQL Tutorial</a> – Beginner SQL guide.</li>
+                <li><a href="https://excel-practice-online.com/" target="_blank" rel="noopener noreferrer">Excel Practice Online</a> – Free Excel exercises.</li>
+            </ul>
+        </section>
+
+        
+        <section class="category">
+            <strong>Tools:</strong>
+            <ul class="resources-list">
+                <li><a href="https://mycolor.space/" target="_blank" rel="noopener noreferrer"><strong>ColorSpace</strong></a> – Create color palettes online.</li>
+                <li><a href="https://github.com/auctors/free-lunch" target="_blank" rel="noopener noreferrer"><strong>Free Lunch</strong></a> – Curated list of free software.</li>
+                <li><a href="https://ninety180.com/" target="_blank" rel="noopener noreferrer"><strong>Ninety 180</strong></a> – Visualize post-Brexit EU stay days.</li>
+                <li><a href="https://cycle.travel/" target="_blank" rel="noopener noreferrer"><strong>Cycle.Travel</strong></a> – Bicycle route planner for quiet roads.</li>
                 <li><a href="https://excel-practice-online.com/" target="_blank" rel="noopener noreferrer">Excel Practice Online</a> – Free Excel exercises.</li>
             </ul>
         </section>
