--- a/assets/header.html
+++ b/assets/header.html
@@ -4,13 +4,7 @@
             <div class="sub-nav">
                 <a href="index.html">Home</a>
                 <a href="projects.html">Projects</a>
-                <div class="dropdown">
-                    <a href="#" class="dropbtn">Resources</a>
-                    <div class="dropdown-content">
-                        <a href="statistics.html">Learn Data Science</a>
-                        <a href="software.html">Recommended Tools</a>
-                    </div>
-                </div>
+                <a href="resources.html">Resources</a>
                 <a href="assets/CV.pdf">CV</a>
                 <a href="https://www.linkedin.com/in/tomcantellow/" target="_blank">LinkedIn</a>
                 <a href="mailto:tcantellow@gmail.com">Contact</a>
