--- a/resources.html
+++ b/resources.html
@@ -116,11 +116,10 @@
         <section class="category">
             <strong>Tools:</strong>
             <ul class="resources-list">
-                <li><a href="https://mycolor.space/" target="_blank" rel="noopener noreferrer"><strong>ColorSpace</strong></a> – Create color palettes online.</li>
-                <li><a href="https://github.com/auctors/free-lunch" target="_blank" rel="noopener noreferrer"><strong>Free Lunch</strong></a> – Curated list of free software.</li>
-                <li><a href="https://ninety180.com/" target="_blank" rel="noopener noreferrer"><strong>Ninety 180</strong></a> – Visualize post-Brexit EU stay days.</li>
-                <li><a href="https://cycle.travel/" target="_blank" rel="noopener noreferrer"><strong>Cycle.Travel</strong></a> – Bicycle route planner for quiet roads.</li>
-                <li><a href="https://excel-practice-online.com/" target="_blank" rel="noopener noreferrer">Excel Practice Online</a> – Free Excel exercises.</li>
+                <li><a href="https://mycolor.space/" target="_blank" rel="noopener noreferrer">ColorSpace</a> – Create color palettes online.</li>
+                <li><a href="https://github.com/auctors/free-lunch" target="_blank" rel="noopener noreferrer">Free Lunch</a> – Curated list of free software.</li>
+                <li><a href="https://ninety180.com/" target="_blank" rel="noopener noreferrer">Ninety 180</a> – Visualize post-Brexit EU stay days.</li>
+                <li><a href="https://cycle.travel/" target="_blank" rel="noopener noreferrer">Cycle.Travel</a> – Bicycle route planner for quiet roads.</li>
             </ul>
         </section>
     </main>
