--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,17 @@
         window.onload = loadHeader;
     </script>
 
+            <div class="project">
+            <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">
+                <img src="assets/images/netzeroindex.png" alt="Net Zero Resilience Index">
+            </a>
+            <div class="project-content">
+                <h2>Net Zero Resilience Index</h2>
+                <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
+                <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
+            </div>
+        </div>
+
     <main>
         <div class="project">
             <a href="https://doi.org/10.1002/geo2.70008" target="_blank">
@@ -78,19 +89,6 @@
                 <h2>The Salt Fringe</h2>
                 <p>Published in <i>Geo: Geography and Environment</i>, this journal article explores the energy efficiency of homes in seaside towns.</p>
                 <a href="https://doi.org/10.1002/geo2.70008" target="_blank">Article</a>
-            </div>
-        </div>
-
-        <div class="project">
-            <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">
-                <img src="assets/images/netzeroindex.png" alt="Net Zero Resilience Index">
-            </a>
-            <div class="project-content">
-                <h2>Net Zero Resilience Index</h2>
-                <p>I developed an index to compare the vulnerability of UK places to green-led economic restructuring.</p>
-                <a href="https://www.bristol.ac.uk/policybristol/policy-briefings/net-zero-decarbonisation-economy/" target="_blank">Report</a> |
-                <a href="https://www.bristol.ac.uk/media-library/sites/policybristol/briefings/Devising%20a%20net%20zero%20resilience%20index,%20a%20note%20on%20methods.pdf" target="_blank">Methodological Note</a> |
-                <a href="https://tcantellow.github.io/netzeroindex/index.html" target="_blank">Website</a>
             </div>
         </div>
 
@@ -113,7 +111,7 @@
                 <h2>Retrofitting Rentals</h2>
                 <p>A project assessing the state of energy efficiency in Bristol's private rental sector.</p>
                 <a href="https://www.bristol.ac.uk/policybristol/policy-engagement-projects/retrofitting-rentals-bristol/" target="_blank">Report</a> |
-                <a href="https://uobristol.maps.arcgis.com/apps/instant/interactivelegend/index.html?appid=bdc9bdf0ac9a405fb48e926e461679ed" target="_blank">Webmap</a>
+                <a href="https://uobristol.maps.arcgis.com/apps/instant/interactivelegend/index.html?appid=bdc9bdf0ac9a405fb48e926e461679ed" target="_blank">Map</a>
             </div>
         </div>
 
@@ -124,7 +122,7 @@
             <div class="project-content">
                 <h2>Good Credit Index</h2>
                 <p>I produced all maps included in Demos' 2023 Good Credit Index Report.</p>
-                <a href="https://demos.co.uk/research/credit-in-the-cost-of-living-crisis-the-good-credit-index-2023/" target="_blank">Good Credit Index 2023</a>
+                <a href="https://demos.co.uk/research/credit-in-the-cost-of-living-crisis-the-good-credit-index-2023/" target="_blank">Report</a>
             </div>
         </div>
 
@@ -135,7 +133,7 @@
             <div class="project-content">
                 <h2>Cryptoassets Briefing</h2>
                 <p>A briefing on Cryptoassets produced during the application process for a 3-month internship with the Home Office's Central Analysis and Insights Team.</p>
-                <a href="assets/Cryptoassets.pdf" target="_blank">Cryptoassets Briefing</a>
+                <a href="assets/Cryptoassets.pdf" target="_blank">Report</a>
             </div>
         </div>
 
@@ -146,7 +144,7 @@
             <div class="project-content">
                 <h2>Master's Dissertation</h2>
                 <p>My dissertation, <i>A Spatial Examination of Populism and Absenteeism in the UK in the Context of the 2016 EU Referendum</i>, was submitted in 2018 for my MSc in Applied GIS at the University of Sheffield, and won the Ian Masser Prize for best master's dissertation.</p>
-                <a href="assets/Cantellow_MSc.pdf" target="_blank">Master's Dissertation</a>
+                <a href="assets/Cantellow_MSc.pdf" target="_blank">Dissertation</a>
             </div>
         </div>
         
