--- a/resources.html
+++ b/resources.html
@@ -54,12 +54,12 @@
     <main>
 
         <section class="category">
-            <strong>Introductory Guides to R and Data Science:</strong>
+            <strong>Introductory guides to R and data science:</strong>
             <ul class="resources-list">
                 <li><a href="https://r4ds.had.co.nz/" target="_blank" rel="noopener noreferrer">R for Data Science</a> – Hands-on guide to data science with R.</li>
                 <li><a href="https://benwhalley.github.io/just-enough-r/" target="_blank" rel="noopener noreferrer">Just Enough R</a> – Concise intro to R for beginners.</li>
                 <li><a href="https://bookdown.org/ndphillips/YaRrr/" target="_blank" rel="noopener noreferrer">YaRrr! The Pirate’s Guide to R</a> – Fun, accessible R programming guide.</li>
-                <li><a href="https://clauswilke.com/dataviz/index.html" target="_blank" rel="noopener noreferrer">Fundamentals of Data Visualisation</a> – Comprehensive visualization concepts.</li>
+                <li><a href="https://clauswilke.com/dataviz/index.html" target="_blank" rel="noopener noreferrer">Fundamentals of Data Visualisation</a> – Comprehensive visualisation concepts.</li>
                 <li><a href="https://www.statlearning.com/" target="_blank" rel="noopener noreferrer">Introduction to Statistical Learning</a> – Foundational machine learning textbook.</li>
                 <li><a href="https://xcelab.net/rm/" target="_blank" rel="noopener noreferrer">Statistical Rethinking</a> – Key applied statistics textbook.</li>
                 <li><a href="https://bookdown.org/ajkurz/Statistical_Rethinking_recoded/" target="_blank" rel="noopener noreferrer">Statistical Rethinking Recoded</a> – Recoded exercises from the book.</li>
@@ -67,7 +67,7 @@
         </section>
 
         <section class="category">
-            <strong>Advanced R and Hierarchical Modelling:</strong>
+            <strong>Advanced R and hierarchical modelling:</strong>
             <ul class="resources-list">
                 <li><a href="https://bookdown.org/roback/bookdown-BeyondMLR/" target="_blank" rel="noopener noreferrer">Beyond Multiple Linear Regression</a> – Advanced regression techniques.</li>
                 <li><a href="https://m-clark.github.io/models-by-example/" target="_blank" rel="noopener noreferrer">Models by Example</a> – Practical statistical modeling examples.</li>
@@ -86,7 +86,7 @@
         </section>
 
         <section class="category">
-            <strong>Geographic Data Science:</strong>
+            <strong>Geographic data science:</strong>
             <ul class="resources-list">
                 <li><a href="https://profrichharris.github.io/MandM/" target="_blank" rel="noopener noreferrer">Mapping and Modelling Geographic Data in R</a> – Mixed-methods spatial modeling.</li>
                 <li><a href="https://spatialcausal.org/" target="_blank" rel="noopener noreferrer">Spatial Causal Inference</a> – Spatial analysis and causal inference.</li>
@@ -102,10 +102,10 @@
         </section>
 
         <section class="category">
-            <strong>Additional Resources:</strong>
+            <strong>Additional resources:</strong>
             <ul class="resources-list">
                 <li><a href="https://statmodeling.stat.columbia.edu/" target="_blank" rel="noopener noreferrer">Statistical Modeling, Causal Inference, and Social Science</a> – Blog by Andrew Gelman.</li>
-                <li><a href="https://link.springer.com/article/10.1007/s11135-017-0584-6" target="_blank" rel="noopener noreferrer">Springer: Statistical Methods in Survey Research</a> – Scholarly article.</li>
+                <li><a href="https://link.springer.com/article/10.1007/s11135-017-0584-6" target="_blank" rel="noopener noreferrer">Confounding and collinearity in regression analysis</a> – Scholarly article.</li>
                 <li><a href="https://advstats.psychstat.org/book/longitudinal/index.php" target="_blank" rel="noopener noreferrer">Longitudinal Data Analysis</a> – Guide to longitudinal data methods.</li>
                 <li><a href="https://w3schools.com/sql/" target="_blank" rel="noopener noreferrer">W3Schools SQL Tutorial</a> – Beginner SQL guide.</li>
                 <li><a href="https://excel-practice-online.com/" target="_blank" rel="noopener noreferrer">Excel Practice Online</a> – Free Excel exercises.</li>
