--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <img src="assets/images/cantellow.png" alt="Photo of Tom Cantellow">
             <div class="profile-info">
                 <h2>&nbsp&nbsp&nbspTom Cantellow</h2>
-                <p class="subheading">Quantitative Human Geographer
+                <p class="subheading">Data Scientist & Policy Analyst</p>
+                <p class="subheading">PhD Quantitative Human Geography</p>
             </div>
         </section>
         
