--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <img src="assets/images/cantellow.png" alt="Photo of Tom Cantellow">
             <div class="profile-info">
                 <h2>&nbsp&nbsp&nbspTom Cantellow</h2>
-                <p class="subheading">Data Scientist & Policy Analyst</p>
-                <p class="subheading">PhD Quantitative Human Geography</p>
+        <p class="subheading">
+            Data Scientist & Policy Analyst<br>
+            PhD Quantitative Human Geography
+        </p>
             </div>
         </section>
         
@@ -52,7 +54,7 @@
                 I am a researcher interested in the economy, society, and politics of Britain. I use data science and quantitative methodologies to analyse inequality, housing, energy efficiency, voting, personal finance, and local economies.
             </p>
             <p>
-                I am available to educate, consult, and collaborate on map production, data analysis, survey design, and many other topics. <a href="mailto:tcantellow@gmail.comk">Get in touch.</a>
+                I am available to consult, collaborate, and educate on map production, data analysis, survey design, and many other topics. <a href="mailto:tcantellow@gmail.comk">Get in touch.</a>
             </p>
         </section>
 
