--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Tom Cantellow</h2>
         <p class="subheading">
             Data Scientist & Policy Analyst<br>
-            PhD Quantitative Human Geography
+            PhD, Quantitative Human Geography
         </p>
     </div>
 </section>
