--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <div class="profile-info">
         <h2>Tom Cantellow</h2>
         <p class="subheading">
-            Data Scientist & Policy Analyst<br>
+            Policy & Data Analyst<br>
+            Housing, Politics, Economics & Net Zero<br>
             PhD, Quantitative Human Geography
         </p>
     </div>
