--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <h2>Tom Cantellow</h2>
         <p class="subheading">
             Policy & Data Analyst<br>
-            Housing, Politics, Economics & Net Zero<br>
-            PhD, Quantitative Human Geography
+            PhD, Quantitative Human Geography<br>
+            Housing, Politics, Economics & Net Zero
         </p>
     </div>
 </section>
