--- a/resources.html
+++ b/resources.html
@@ -59,6 +59,7 @@
                 <li><a href="https://r4ds.had.co.nz/" target="_blank" rel="noopener noreferrer">R for Data Science</a> – Hands-on guide to data science with R.</li>
                 <li><a href="https://benwhalley.github.io/just-enough-r/" target="_blank" rel="noopener noreferrer">Just Enough R</a> – Concise intro to R for beginners.</li>
                 <li><a href="https://bookdown.org/ndphillips/YaRrr/" target="_blank" rel="noopener noreferrer">YaRrr! The Pirate’s Guide to R</a> – Fun, accessible R programming guide.</li>
+                <li><a href="https://www.bigbookofr.com/" target="_blank" rel="noopener noreferrer">The Big Book of R</a> – "Your last-ever R-related bookmark".</li>
                 <li><a href="https://clauswilke.com/dataviz/index.html" target="_blank" rel="noopener noreferrer">Fundamentals of Data Visualisation</a> – Comprehensive visualisation concepts.</li>
                 <li><a href="https://www.statlearning.com/" target="_blank" rel="noopener noreferrer">Introduction to Statistical Learning</a> – Foundational machine learning textbook.</li>
                 <li><a href="https://xcelab.net/rm/" target="_blank" rel="noopener noreferrer">Statistical Rethinking</a> – Key applied statistics textbook.</li>
@@ -107,6 +108,7 @@
                 <li><a href="https://statmodeling.stat.columbia.edu/" target="_blank" rel="noopener noreferrer">Statistical Modeling, Causal Inference, and Social Science</a> – Blog by Andrew Gelman.</li>
                 <li><a href="https://link.springer.com/article/10.1007/s11135-017-0584-6" target="_blank" rel="noopener noreferrer">Confounding and collinearity in regression analysis</a> – Scholarly article.</li>
                 <li><a href="https://advstats.psychstat.org/book/longitudinal/index.php" target="_blank" rel="noopener noreferrer">Longitudinal Data Analysis</a> – Guide to longitudinal data methods.</li>
+                <li><a href="https://wesmckinney.com/book/" target="_blank" rel="noopener noreferrer">Python for Data Analysis</a> – Python textbook.</li>
                 <li><a href="https://w3schools.com/sql/" target="_blank" rel="noopener noreferrer">W3Schools SQL Tutorial</a> – Beginner SQL guide.</li>
                 <li><a href="https://excel-practice-online.com/" target="_blank" rel="noopener noreferrer">Excel Practice Online</a> – Free Excel exercises.</li>
             </ul>
